[gd_scene load_steps=8 format=3 uid="uid://bcoghkpisf3oh"]

[ext_resource type="Script" path="res://src/store/store_panel_item.gd" id="1_sq1oh"]
[ext_resource type="Texture2D" uid="uid://btg536br2c8ym" path="res://resources/textures/Items/Upgrades/scroll_2.png" id="2_l8u7f"]
[ext_resource type="Texture2D" uid="uid://d342p0jsxllnb" path="res://resources/textures/Items/Weapons/frame.png" id="3_wrl0p"]
[ext_resource type="PackedScene" uid="uid://dd81g2vvmtvgm" path="res://src/utilities/texture_button_base.tscn" id="5_4iyda"]
[ext_resource type="FontFile" uid="uid://ck8esxhm34uw6" path="res://resources/font/bionicle-training-card-font-2-4.otf" id="7_chv55"]
[ext_resource type="Texture2D" uid="uid://ukhr2qwj5nm7" path="res://resources/textures/Items/Gold/coin_05d.png" id="8_drmbc"]

[sub_resource type="Theme" id="Theme_b0tjg"]
default_font = ExtResource("7_chv55")
default_font_size = 10

[node name="StorePanelItem" type="Panel"]
custom_minimum_size = Vector2(210, 115)
offset_right = 210.0
offset_bottom = 112.0
script = ExtResource("1_sq1oh")
metadata/_edit_horizontal_guides_ = [21.0]
metadata/_edit_vertical_guides_ = [206.0]

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 210.0
offset_bottom = 115.0
theme = SubResource("Theme_b0tjg")
color = Color(0.0941176, 0.0941176, 0.0941176, 0.862745)

[node name="ItemSprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(39.5, 40)
texture = ExtResource("2_l8u7f")

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(39.25, 40)
scale = Vector2(5.04167, 5)
texture = ExtResource("3_wrl0p")

[node name="BuyTextureButton" parent="." instance=ExtResource("5_4iyda")]
layout_mode = 0
offset_left = 8.0
offset_top = 75.0
offset_right = 2056.0
offset_bottom = 1099.0
scale = Vector2(0.0305118, 0.0305118)
label_text = "BUY"

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_top = 24.0
offset_right = 146.0
offset_bottom = 44.0
scale = Vector2(0.800521, 0.899883)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.933333, 1)
theme_override_fonts/font = ExtResource("7_chv55")
theme_override_font_sizes/font_size = 14
text = "LEVEL: 1"

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_top = 9.0
offset_right = 193.0
offset_bottom = 26.0
scale = Vector2(0.800521, 0.899883)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.933333, 1)
theme_override_fonts/font = ExtResource("7_chv55")
theme_override_font_sizes/font_size = 16
text = "NAME"

[node name="DescriptionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_top = 37.0
offset_right = 231.0
offset_bottom = 79.0
scale = Vector2(0.800521, 0.899883)
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
theme_override_fonts/font = ExtResource("7_chv55")
theme_override_font_sizes/font_size = 12
text = "Description"
autowrap_mode = 3

[node name="Cost" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 76.0
offset_right = 152.0
offset_bottom = 109.0
scale = Vector2(0.963621, 0.843528)

[node name="GoldIcon" type="TextureRect" parent="Cost"]
layout_mode = 2
texture = ExtResource("8_drmbc")

[node name="GoldLabel" type="Label" parent="Cost"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.933333, 1)
theme_override_fonts/font = ExtResource("7_chv55")
theme_override_font_sizes/font_size = 32
text = "123"

[connection signal="pressed" from="BuyTextureButton" to="." method="_on_buy_texture_button_pressed"]
